# feature-proposal

./: Cargo.toml  Makefile  README.md  SECURITY.md  package.json
.github/actions/setup/: action.yml
.github/workflows/: dependabot-auto-merge.yml  main.yml  publish-cli.yml  publish-rust.yml
clients/cli/: Cargo.toml
clients/cli/src/: main.rs
program/: Cargo.toml
program/src/: instruction.rs  processor.rs
program/tests/: functional.rs
scripts/: restart-test-validator.sh
scripts/client/: publish-cli.mjs  test-cli.mjs
