[package]
name = "spl-feature-proposal"
version = "2.0.0"
description = "Solana Program Library Feature Proposal Program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/feature-proposal"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.5.7"
solana-feature-gate-interface = "2.2.1"
solana-program = "3.0.0"
solana-sdk-ids = "2.2.1"
solana-system-interface = "1"
spl-token = { version = "8.0", features = [
  "no-entrypoint",
] }

[dev-dependencies]
solana-program-test = "2.3.4"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
