[package]
name = "spl-feature-proposal"
version = "2.0.0"
description = "Solana Program Library Feature Proposal Program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/feature-proposal"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.6.0"
solana-feature-gate-interface = "3.0.0"
solana-program = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-system-interface = { version = "3", features = ["bincode"] }
spl-token = { version = "9.0", features = [
  "no-entrypoint",
] }

[dev-dependencies]
solana-program-test = { version = "3.1.8", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
