[package]
name = "spl-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/feature-proposal"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
clap = "2.33.3"
solana-clap-utils = "2.2.0"
solana-cli-config = "2.2.20"
solana-client = "2.2.0"
solana-logger = "2.2.1"
solana-sdk = "2.2.1"
spl-feature-proposal = { version = "2.0", path = "../../program", features = ["no-entrypoint"] }

[[bin]]
name = "spl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
