[package]
name = "spl-feature-proposal-cli"
version = "1.2.0"
description = "SPL Feature Proposal Command-line Utility"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/feature-proposal"
license = "Apache-2.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = "2.33.3"
solana-clap-utils = "3.0.0"
solana-cli-config = "3.0.0"
solana-client = "3.0.0"
solana-logger = "3.0.0"
solana-sdk = "3.0.0"
spl-feature-proposal = { version = "2.0", path = "../../program", features = ["no-entrypoint"] }

[[bin]]
name = "spl-feature-proposal"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
